Build on github actions