@@ -35,10 +35,14 @@ plugins {
     id "com.github.ben-manes.versions" version "0.44.0"
 }
 wrapper {
-    gradleVersion = '8.0.2'
+    gradleVersion = '9.4.1'
 }
 
-apply from: "build-${profile}.gradle"
+def resolve(String name) {
+    return (findProperty(name) ?: System.getenv(name))
+}
+
+apply from: "build-${resolve('profile')}.gradle"
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'java-library'
@@ -50,8 +54,12 @@ configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.sourceCompatibility = JavaVersion.VERSION_1_8
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.targetCompatibility = JavaVersion.VERSION_1_8
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.release = 8
+}
+[compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.encoding = 'UTF-8'
 
 group = ext.mainGroup
 version = ext.mainVersion + (ext.snapshot ? '-SNAPSHOT' : '')
@@ -59,27 +67,13 @@ version = ext.mainVersion + (ext.snapshot ? '-SNAPSHOT' : '')
 repositories {
     mavenCentral()
     maven {
-        url "${artifactory_contextUrl}/libs-${project.ext.snapshot ? 'all-local' : 'release'}"
+        url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
         credentials {
-            username = 'public-reader'
-            password = 'Public-reader_123'
+            username "${resolve('repos_user')}"
+            password "${resolve('repos_password')}"
         }
     }
     mavenLocal()
-}
-
-idea {
-    project {
-        jdkName = '1.8'
-        languageLevel = JavaVersion.VERSION_1_8
-    }
-    module {
-        downloadJavadoc = false
-        downloadSources = false
-        inheritOutputDirs = true
-        excludeDirs += file('gradle')
-        excludeDirs += file('out')
-    }
 }
 
 def propName = rootProject.name
@@ -113,12 +107,20 @@ javadoc {
     failOnError = false
     options.encoding = 'utf-8'
 }
-java{
+java {
     withSourcesJar()
     withJavadocJar()
 }
-
 publishing {
+    repositories {
+        maven {
+            url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
+            credentials {
+                username = resolve("repos_user")
+                password = resolve("repos_password")
+            }
+        }
+    }
     publications {
         mavenJava(MavenPublication) {
             from components.java
@@ -143,6 +145,8 @@ dependencies {
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+
     testImplementation "org.spockframework:spock-core:2.3-groovy-4.0"
     testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
     testImplementation "org.testcontainers:spock:${testcontainersVersion}"
@@ -153,16 +157,17 @@ dependencies {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
-def sonarAvailable = properties['sonar_url'] != null && properties['sonar_user'] != null && properties['sonar_password'] != null
+def sonarAvailable = resolve('sonar_url') != null && resolve('sonar_user') != null && resolve('sonar_password') != null
 if (sonarAvailable) {
     apply plugin: 'org.sonarqube'
-    sonar {
+    sonarqube {
         properties {
-            property "sonar.host.url", "${sonar_url}"
-            property "sonar.login", "${sonar_user}"
-            property "sonar.password", "${sonar_password}"
+            property "sonar.host.url", resolve('sonar_url')
+            property "sonar.login", resolve('sonar_user')
+            property "sonar.password", resolve('sonar_password')
         }
     }
 }
